--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
 <h2>Telegram Bot</h2>
 <p>
-  <a href="https://t.me/screen_test_app" target="_blank">
+  <a href="https://t.me/ssunxsite_bot" target="_blank">
     <button class="btn">Telegram Bot</button>
   </a>
 </p>
@@ -168,3 +168,4 @@
 
 </body>
 </html>
+
